# mousy

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  release.config.js
.github/workflows/: build.yaml  release.yaml
scripts/: build.sh
src/: build-constant.h  main.cc
workflow-scripts/: build.sh
